  use SCIPstr(n)casecmp() (scip/pub_misc.h) instead

### Command line interface

- help <command> now allows to display information on specific command.
- allow to hide certain commands in the help list
- add the (hidden) command "exit¨ to exit SCIP.

### Interfaces to external software

### Changed parameters

### New parameters

- branching/pscost/discountfactor, branching/relpscost/discountfactor as the discount factor for ancestral pseudo costs in pscost and relpscost branching rules
- branching/discountedpscost to enable/disable recording ancestral pseudo costs
- new parameter "propagating/symmetry/handlesignedorbitopes" to control whether special symmetry handling techniques for orbitopes whose columns can be (partially) reflected shall be applied
- new parameter "propagating/symmetry/usesimplesgncomp" to control whether symmetry components all of whose variables are simultaneously reflected by a symmetry shall be handled by a special inequality
- new parameter "propagating/symmetry/dispsyminfo" to control whether information about which symmetry handling methods are applied are printed
- new parameter "presolving/implint/columnrowratio" indicates the ratio of rows/columns where the row-wise network matrix detection algorithm is used instead of the column-wise network matrix detection algorithm
- new parameter "presolving/implint/numericslimit" determines the limit for absolute integral coefficients beyond which the corresponding rows and variables are excluded from implied integer detection

### Data structures

Deleted files
-------------

Testing
-------

Build system
------------

- changed the default for TPI to tny

### Makefile

### Cmake

- increased minimal required cmake version to 3.11
- removed automatic download and build of Bliss during cmake configuration when -DSYM=(s)bliss;
  please build and install from https://github.com/scipopt/bliss before and specify -DBLISS_DIR

Fixed bugs
----------
